--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -2,7 +2,7 @@
   "layer": "top",
     "position": "right",
     "modules-left": ["hyprland/workspaces"],
-    "modules-right": ["hyprland/submap", "pulseaudio#icon", "pulseaudio", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/temp-icon", "temperature", "custom/cpu-icon", "cpu","custom/ram-icon", "memory","custom/separator", "tray", "custom/separator", "clock", "clock#day", "clock#week-day"],
+    "modules-right": ["hyprland/submap", "custom/weather", "pulseaudio#icon", "pulseaudio", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/temp-icon", "temperature", "custom/cpu-icon", "cpu","custom/ram-icon", "memory","custom/separator", "tray", "custom/separator", "clock", "clock#day", "clock#week-day"],
     "hyprland/workspaces": {
       "all-outputs": false,
       "active-only": false,
@@ -22,6 +22,13 @@
       "persistent-workspaces": {
         "*": 7
       }
+    },
+    "custom/weather": {
+      "format": "{}",
+      "tooltip": true,
+      "interval": 3600,
+      "exec": "wttrbar --vertical-view",
+      "return-type": "json"
     },
     "pulseaudio#icon": {
       "format": "<span font='10'>{icon}</span>",
