--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -61,7 +61,7 @@
     "temperature": {
       "thermal-zone": 2,
       "critical-threshold": 80,
-      "format": "{temperatureC}°"
+      "format": "{temperatureC}"
     },
     "custom/dsbattery-icon": {
       "format": "{}",
